se añadio README.me y mejoras